Fix visibility of hidden single button popup.

--- a/src/styles/base.styl
+++ b/src/styles/base.styl
@@ -55,7 +55,7 @@ tweak-inverted-text() {
 	display:block;
 }
 .social-likes .social-likes__widget {
-	visibility:visible;
+	visibility:inherit;
 }	
 
 .social-likes {
